# Corax_standalone

./: .gitignore  .gitmodules  makefile  manage.py  todo.md
src/: CMakeLists.txt  Corax.cpp  Cp.g4  colors.h  error.cpp  error.h  main.cpp  utils.cpp  utils.h
src/compiler/: CMakeLists.txt  Type.cpp  Type.h  compiler.cpp  compiler.h  expression.h  expressions.cpp  identifier.cpp  identifier.h  operand.h  operators.h  scope.h  stable.cpp  stable.h  target.cpp  target.h  type.cpp  type.h  variable.h
src/compiler/targets/: corvassembly.cpp  corvassembly.h
src/examples/: expr.txt  fib.cx  function.cx  import.cx  pexpr.txt  prec_test.cx  preprocessed.cx  preprocessed_old.cx  tertiary.cx  test.cp  test.cx  test_errors.cx  test_old2.cx  test_old4.cx
src/grammars/: Corax.g4  CoraxExpr.g4  Corax_old.g4  Cp.g4  Cp_post.g4  Cp_pre.g4  Post.g4  Pre.g4  PreExpr.g4  PreLexer.g4  PreParser.g4  Pre_old.g4
src/precompiler/: CMakeLists.txt  precompiler.cpp  precompiler.h  sar.h
src/util/: AntlrHash.g4  CppHash.g4  hashing.py
